--- a/style.css
+++ b/style.css
@@ -73,17 +73,20 @@
      font-size: 16px;
  }
  .card-main-text {
-    font-weight: 500;
-    font-size: 1.5rem;
+    font-weight: 700;
+    font-size: 1.6rem;
     line-height: 1.3;
     margin-bottom: 20px;
+    padding-top: 10px;
  }
 
  .card-quote-text {
      opacity: 70%;
-     font-size: 15px;
+     font-size: 17px;
      font-weight: 500;
      line-height: 1.4;
+     padding-top: 10px;
+     word-spacing: 1.2px;
  }
 
  .card-violet-bg {
@@ -91,7 +94,8 @@
      color: var(--white);
      background-image: url('./images/bg-pattern-quotation.svg'); 
      background-repeat: no-repeat;
-     background-position: top 10px right 100px;
+   background-size: 130px 130px;
+     background-position: top 5px right 100px;
  }
 
  .card-grayblue-bg {
